--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,4 @@ matrix:
   allow_failures:
     - node_js: 5.1.1
 before_script:
-  - npm install -g bower grunt-cli
-  - bower install
-services: mongodb
+  - npm install -g grunt-cli
